fixed footer gap

--- a/src/index.css
+++ b/src/index.css
@@ -127,6 +127,7 @@ li img:hover {
   align-items: center;
   gap: 2rem;
   margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 
 .ingredient-section > div {
